--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,9 @@
 ---
 @charset "utf-8";
 
-
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -48,6 +47,7 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "login",
+        "dashboard"
 ;
